fix paragraphs spacing

--- a/app/globals.css
+++ b/app/globals.css
@@ -66,4 +66,8 @@
   address a {
     @apply font-normal text-green-600 hover:underline;
   }
+
+  article {
+    @apply grid gap-4;
+  }
 }
